
Please note that only the most significant changes are reported here.
A full ChangeLog is available in the log messages of the SVN repository
on R-Forge.

      CHANGES IN VERSION 1.2-0 (2013-10-21)

* Inequality constraints now support multiple constraints 
  (B may be a vector).

* Fixed a bug in documentation, inequality constraint requires
  A %*% theta + B > 0, not >= 0 as stated earlier.

* function sumKeepAttr() is imported from the miscTools package now (before
maxLik() could not be used by another package when this package imported (and 
not depended on) the maxLik package) (bug reported and solution provided by
Martin Becker)


      CHANGES IN VERSION 1.1-8 (2013-09-17)

* fixed bug that could occur in the Newton-Raphson algorithm if the 
log-likelihood function returns a vector with observation-specific values
or if there are NAs in the function values, gradients, or Hessian


      CHANGES IN VERSION 1.1-4 (2013-09-16)

* the package code is byte-compiled

* if the log-likelihood function contains NA, the gradient is not calculated; 
if components of the gradient contain NA, the Hessian is not calculated

* slightly improved documentation

* improved warning messages and error messages when doing constrained
optimisation

* added citation information

* added start-up message 


	CHANGES IN VERSION 1.1-2 (2012-03-04)

* BHHH only considers free parameters when analysing the size of gradient

* numericGradient and numericHessian check for the length of
  vector function


        CHANGES IN VERSION 1.1-0 (2012-01-...)

* Conjugate-gradient (CG) optimization  method included.

* it is guaranteed now that the variance covariance matrix returned 
by the vcov() method is always symmetric.

* summary.maxLik is guaranteed to use maxLik specific methods, even if
  corresponding methods for derived classes have higher priority.


	CHANGES IN VERSION 1.0-2 (2011-10-16)

This is mainly bugfix release.

* maxBFGSR works with fixed parameters.
