@@ -28,6 +28,7 @@ importFrom( "sandwich", "estfun" )
 S3method( "activePar", "default" )
 S3method( "AIC", "maxLik" )
 S3method( "bread", "maxLik" )
+S3method( "coef", "maxim" )
 S3method( "coef", "maxLik" )
 S3method( "coef", "summary.maxLik" )
 S3method( "condiNumber", "default" )
