@@ -67,10 +67,11 @@ maxNM(fn, grad = NULL, hess = NULL, start, fixed = NULL,
     \code{eqA} and \code{eqB} for equality-constrained optimization
     \eqn{A \theta + B = 0}{A \%*\% theta + B = 0}; or \code{ineqA} and
     \code{ineqB} for inequality constraints \eqn{A \theta + B > 0}{A
-      \%*\% theta + B > 0}.  In the inequality-constraints-case, more
+      \%*\% theta + B > 0}.  More
        than one
        row in \code{ineqA} and \code{ineqB} corresponds to more than
-       one linear constraint, in that case all these must be positive.
+       one linear constraint, in that case all these must be zero
+       (equality) or positive (inequality constraints).
        The equality-constrained problem is forwarded
     to \code{\link{sumt}}, the inequality-constrained case to
     \code{\link{constrOptim2}}.
