@@ -12,6 +12,10 @@ on R-Forge.
 * Fixed a bug in documentation, inequality constraint requires
   A %*% theta + B > 0, not >= 0 as stated earlier.
 
+* Equality constraints (SUMT) checks conformity of the matrices
+
+* coef.maxim is now exported
+
 * function sumKeepAttr() is imported from the miscTools package now (before
 maxLik() could not be used by another package when this package imported (and 
 not depended on) the maxLik package) (bug reported and solution provided by
